<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Peer2PeerStreaming</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_peer_refresh">Refresh</string>
    <string name="action_new_upload">Upload</string>
    <string name="loading_progress_string">Laden&#8230;</string>
    <string name="title_activity_peer_client">Streaming Client</string>
    <string name="setup_button">Setup</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="teardown_button">Teardown</string>
    <string name="movie_stream">Movie</string>
    <string name="title_activity_server">Streaming Server</string>
    <string name="title_activity_discovery_server">DiscoveryServerActivity</string>

</resources>
